--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ h1{
     display: inline-block;
     margin-top: 75px;
     margin-bottom: 500px;
-    margin-left: 550px;
+    margin-left: 600px;
     position: fixed;
     font-size: 30px;
     text-decoration: none;
@@ -207,7 +207,7 @@ h1{
 #gift h1{
     font-size: 50px;
     margin-bottom: 600px;
-    position: absolute;
+    position: fixed;
     text-align: center;
     margin-left: 600px;
     font-style: bold;
